--- a/template/pages/landingPage.html
+++ b/template/pages/landingPage.html
@@ -20,27 +20,47 @@
 
     <title>Trackerr</title>
     <link rel="stylesheet" href="../styles/landingPage.css" />
+    <link rel="stylesheet" href="../styles/normalize.css" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
     </style>
-    
   </head>
   <body>
+    <div class="div-container">
+      <nav class="nav-bar">
+        <div class="logo">
+          <p>TRACKE<span>RR</span></p>
+        </div>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <div>
+          <button class="login">Login</button>
+          <button class="register">Register</button>
+        </div>
+      </nav>
+    </div>
     <header>
-      <nav class="nav-bar"></nav>
       <div class="search-section">
         <h1>Track your package with Trackerr</h1>
-        <input type="number" />
-        <button class="track-button"></button>
-        <p>
-          Are you a vendor ? <span>register</span> to generate a tracking number
-          for your customers.<span>register</span>
+        <input
+          type="search"
+          id="search"
+          name="search"
+          placeholder="Enter your tracking number"
+        />
+        <button type="submit" class="track-btn">Track</button>
+        <p class="section-text">
+          Are you a vendor ? <a href="" class="register-li">register</a> to
+          generate a tracking number for your customers.
+          <a href="" class="register-li">register</a>
         </p>
       </div>
     </header>
 
     <main>
-      <p>Display shiped items</p>
       <!--This section will be rendered dynamicaly after a customer search for his/her product-->
       <!--
         
