--- a/template/styles/landingPage.css
+++ b/template/styles/landingPage.css
@@ -10,10 +10,15 @@ html {
 }
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: whitesmoke;
+  background-color: white;
 }
 a {
   color: white;
+  text-decoration: none;
+}
+a:hover {
+  color: #b39eb5;
+  text-decoration: underline;
 }
 ul {
   margin: 0;
@@ -24,8 +29,8 @@ ul {
 nav {
   color: #fff;
   padding: 10px 0;
-  margin-left: 15px;
-  margin-right: 15px;
+  margin-left: 30px;
+  margin-right: 30px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -45,22 +50,26 @@ li {
 button {
   background-color: #a753ff;
   border-radius: 5px;
+  transform: translateY(-2px);
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+  height: 35px;
 }
 button:hover {
   background-color: #b39eb5;
 }
 input {
-  width: 450px;
-  height: 35px;
+  width: 600px;
+  height: 45px;
   border-radius: 5px;
+  padding: 5px;
 }
 .track-btn {
-  height: 35px;
+  height: 45px;
 }
 .search-section {
   text-align: center;
-  margin-top: 110px;
   margin-bottom: 100px;
+  padding: 50px;
 }
 .section-text {
   font-size: 15px;
@@ -69,9 +78,13 @@ h1 {
   color: red;
 }
 header {
-  margin-left: 15px;
-  margin-right: 15px;
+  border-bottom: 1px solid black;
+  box-shadow: 0 6px 8px -5px rgba(0, 0, 0, 0.15);
+  background-color: whitesmoke;
 }
 .register-li {
   color: #a753ff;
+}
+.register-li:hover {
+  color: #b39eb5;
 }
