change header style

--- a/template/pages/landingPage.html
+++ b/template/pages/landingPage.html
@@ -29,7 +29,13 @@
     <div class="div-container">
       <nav class="nav-bar">
         <div class="logo">
-          <p>TRACKE<span>RR</span></p>
+          <img
+            src="../login-02/assets/trackerr-logo.jpg"
+            alt="logo"
+            height="50px"
+            width="80px"
+            style="border-radius: 5px"
+          />
         </div>
         <ul>
           <li><a href="#">Home</a></li>
@@ -52,19 +58,10 @@
           placeholder="Enter your tracking number"
         />
         <button type="submit" class="track-btn">Track</button>
-        <p class="section-text">
-          Are you a vendor ? <a href="" class="register-li">register</a> to
-          generate a tracking number for your customers.
-          <a href="" class="register-li">register</a>
-        </p>
       </div>
     </header>
 
     <main>
-      <!--This section will be rendered dynamicaly after a customer search for his/her product-->
-      <!--
-        
-      -->
       <section class="product-display"></section>
     </main>
   </body>
