--- a/template/pages/landingPage.html
+++ b/template/pages/landingPage.html
@@ -19,8 +19,8 @@
     />
 
     <title>Trackerr</title>
-    <link rel="stylesheet" href="../styles/landingPage.css" />
-    <link rel="stylesheet" href="../styles/normalize.css" />
+    <link rel="stylesheet" href="//Trackerr/static/styles/landingPage.css" />
+    <link rel="stylesheet" href="//Trackerr/static/styles/normalize.css" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
     </style>
@@ -30,7 +30,7 @@
       <nav class="nav-bar">
         <div class="logo">
           <img
-            src="../login-02/assets/trackerr-logo.jpg"
+            src="//Trackerr/static/login-02/assets/trackerr-logo.jpg"
             alt="logo"
             height="50px"
             width="80px"
