--- a/template/pages/login.html
+++ b/template/pages/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Trackerr</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="//Trackerr/static/login-02/style.css" />
+    <link rel="stylesheet" href="/Trackerr/static/login-02/style.css" />
   </head>
   <body>
     <div class="login-wrapper">
@@ -12,8 +12,9 @@
         <a href="#" title="Logo">
           <img
             class="logo"
-            src="//Trackerr/static/login-02/assets/logo.png"
+            src="/Trackerr/static/login-02/assets/trackerr-logo.jpg"
             alt="Logo"
+            style="border: 2px solid plum; border-radius: 5px"
           />
         </a>
         <div class="my-form__wrapper">
@@ -24,7 +25,10 @@
           <form class="my-form">
             <div class="socials-row">
               <a href="#" title="Use Google">
-                <img src="assets/google.png" alt="Google" />
+                <img
+                  src="/Trackerr/static/login-02/assets/google.png"
+                  alt="Google"
+                />
                 Log in with Google
               </a>
             </div>
@@ -45,7 +49,7 @@
               <img
                 alt="Email Icon"
                 title="Email Icon"
-                src="//Trackerr/static/login-02/assets/email.svg"
+                src="/Trackerr/static/login-02/assets/email.svg"
               />
             </div>
             <div class="text-field">
@@ -63,7 +67,7 @@
               <img
                 alt="Password Icon"
                 title="Password Icon"
-                src="//Trackerr/static/login-02/assets/password.svg"
+                src="/Trackerr/static/login-02/assets/password.svg"
               />
             </div>
             <input type="submit" class="my-form__button" value="Login" />
@@ -80,13 +84,17 @@
         </div>
       </div>
       <div class="info-side">
-        <img src="assets/mock.png" alt="Mock" class="mockup" />
+        <img
+          src="/Trackerr/static/login-02/assets/mock.png"
+          alt="Mock"
+          class="mockup"
+        />
         <div class="welcome-message">
           <h2>Navitron Maps! 👋</h2>
           <p>Track your parcel with ease</p>
         </div>
       </div>
     </div>
-    <script src="//Trackerr/static/login-02/script.js"></script>
+    <script src="/Trackerr/static/login-02/script.js"></script>
   </body>
 </html>
