--- a/static/styles/vendorPage.css
+++ b/static/styles/vendorPage.css
@@ -6,7 +6,7 @@
         margin: 5px 0px 5px 0px;
         padding: 0;
         font-family: "Lucida Console", "Courier New", monospace, sans-serif;
-        background-color: #76bccf;
+        background-color: #A753ff;
     }
     
     .tracking-section,
