--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/template/styles/register.css">
+    <link rel="stylesheet" href="/static/styles/register.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
-            background-color: #76bccf;
+            background-color: white;
         }
     </style>
 </head>
@@ -22,7 +22,7 @@
     <section>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <img src="/static/Image/Trakerr.jpeg" alt="Company Logo" width="100" height="50" class="logo" title="Our Company Logo">
+                <img src="/static/image/Trakerr.jpeg" alt="Company Logo" width="100" height="50" class="logo" title="Our Company Logo">
             </div>
             <div>
                 <section class="container">
@@ -122,14 +122,12 @@
     </div>
 
 
-    <script src="/template/scripts/register.js"></script>
+    <script src="/static/scripts/register.js"></script>
 
     <footer>
         <small>
             <a href="E-commerce">E-Commerce Solutions</a>
             <p>© 2023 ALX Final Project · All Rights Reserved | <a href="privacy">Privacy</a> | <a href="#">About Us</a> | <a  href="#">Contact Us</a> | <a  href="home.html">Home</a>
-                
-        
 
             </p>
         </small>
