updates to the tracking query route

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,4 +1,5 @@
 BOOOOM YOU're INNNNNNNNNNNNN
 <p> Hello {{user}} </p>
-
+<a href = {{url_for('generate')}}> Generate tracking </a>
+<h3>{{number}}</h3>
 <button onclick="window.location = 'http://localhost:5000/logout'" type='submit'>Logout</button>
