--- a/templates/landingPage.html
+++ b/templates/landingPage.html
@@ -19,7 +19,7 @@
     />
 
     <title>Trackerr</title>
-    <link rel="stylesheet" href="../styles/landingPage.css" />
+    <link rel="stylesheet" href="/static/styles/landingPage.css" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
     </style>
