--- a/template/pages/login.html
+++ b/template/pages/login.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Trackerr</title>
+    <title>Trackerr-Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/Trackerr/static/styles/normalize.css" />
     <link rel="stylesheet" href="/Trackerr/static/login-02/style.css" />
   </head>
   <body>
@@ -74,7 +75,9 @@
             <div class="my-form__actions">
               <div class="my-form__row">
                 <span>Did you forget your password?</span>
-                <a href="#" title="Reset Password"> Reset Password </a>
+                <a href="./resetPassword.html" title="Reset Password">
+                  Reset Password
+                </a>
               </div>
               <div class="my-form__signup">
                 <a href="#" title="Create Account"> Register as Vendor</a>
