--- a/static/styles/landingPage.css
+++ b/static/styles/landingPage.css
@@ -6,8 +6,18 @@
 
 html {
   scroll-behavior: smooth;
-  /*font-size: 62.5%;*/
+  font-size: 100%;
+  transition: 0.5s;
 }
+@keyframes overflow {
+  0% {
+    overflow: hidden;
+  }
+  100% {
+    overflow: hidden;
+  }
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: white;
@@ -34,8 +44,8 @@ ul {
 nav {
   color: #fff;
   padding: 10px 0;
-  margin-left: 30px;
-  margin-right: 30px;
+  margin-left: 4%;
+  margin-right: 4%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -56,7 +66,7 @@ button {
   transform: translateY(-2px);
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
   height: 35px;
-
+  color: white;
   background-color: #a753ff;
   border: none;
   border-radius: 5px;
@@ -82,14 +92,17 @@ input {
   padding: 5px 15px;
   margin-left: 10px;
   cursor: pointer;
+  color: white;
 }
-.search-section {
-  text-align: center;
-  margin-bottom: 150px;
-  padding: 50px;
-  text-align: center;
+.hearder-text {
+  color: white;
+}
 
-  padding: 50px 0;
+.search-section {
+  text-align: left;
+  border: none;
+  padding: 5%;
+  background-color: white;
 }
 #trackingForm {
   display: flex;
@@ -97,31 +110,32 @@ input {
   align-items: center;
 }
 .section-text {
-  font-size: 15px;
+  padding: 0%;
 }
 
-#search {
+#searchInput {
   width: 100%;
   max-width: 600px;
   height: 45px;
   border-radius: 5px;
   padding: 5px;
-  border: none;
 }
 h1 {
-  color: red;
+  color: white;
+  font-size: 5rem;
+  margin: 0;
 }
+
+.search-section h1 {
+  color: red;
+  font-size: 2rem;
+}
+
 header {
+  padding: 50px;
   border-bottom: 1px solid black;
   box-shadow: 0 6px 8px -5px rgba(0, 0, 0, 0.15);
-  background: radial-gradient(
-    circle at 100%,
-    #333,
-    #333 50%,
-    #a753ff 75%,
-    #333 75%
-  );
-  clip-path: polygon(50% 0, 100% 0, 100% 84%, 65% 100%, 35% 100%, 0 85%, 0 0);
+  background: #a753ff;
 }
 .register-li {
   color: #a753ff;
@@ -130,13 +144,36 @@ header {
   color: #b39eb5;
 }
 
-.product-display {
-  height: 600px;
-  max-width: 1100px;
-  border: 1px solid black;
-  margin: 0 auto;
-  width: 90%;
-  margin-top: 50px;
+.product-container {
+  background-color: whitesmoke;
+  margin: 80px;
+  padding: 10px;
+}
+
+.product-info {
+  display: flex;
+  justify-content: space-between;
+}
+.product-name {
+  font-weight: bolder;
+}
+.detail-button {
+  font-size: small;
+}
+.status {
+  font-style: italic;
+  font-weight: normal;
+  margin-left: 5px;
+}
+.tracking-number {
+  font-size: small;
+  color: grey;
+  font-style: italic;
+}
+article {
+  height: 300px;
+  width: 100%;
+  background-color: gainsboro;
 }
 main {
   text-align: center;
@@ -150,4 +187,52 @@ footer {
   bottom: 0;
   left: 0;
   right: 0;
+}
+@media screen and (max-width: 480px) {
+  html {
+    font-size: 57%;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 767px) {
+  html {
+    font-size: 60%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  :root {
+    --section-padding: 5rem 1.5rem;
+    --section-body-padding: 2rem 0 0;
+  }
+  .logo {
+    width: 5rem;
+    height: 4rem;
+  }
+  #searchInput {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    width: 100%;
+  }
+  .search-section {
+    padding: 15px;
+  }
+  .track-btn {
+    margin-left: 0%;
+    width: 100%;
+  }
+  .header-container {
+    width: 90%;
+  }
+
+  header {
+    padding: 10px;
+  }
+  .product-container {
+    background-color: red;
+    width: 10vw;
+  }
+  .product-info {
+    width: 100%;
+  }
 }
