--- a/static/styles/landingPage.css
+++ b/static/styles/landingPage.css
@@ -41,15 +41,6 @@ ul {
   list-style: none;
 }
 
-nav {
-  color: #fff;
-  padding: 10px 0;
-  margin-left: 4%;
-  margin-right: 4%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
 .div-container {
   background-color: #333;
 }
@@ -73,6 +64,7 @@ button {
   padding: 5px 15px;
   margin-left: 10px;
   cursor: pointer;
+  width: 90px;
 }
 button:hover {
   background-color: #b39eb5;
@@ -234,5 +226,83 @@ footer {
   }
   .product-info {
     width: 100%;
+  }
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+.btn {
+  float: right;
+}
+
+.topnav .link:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+.nav-items {
+  display: flex;
+  justify-content: space-between;
+}
+.topnav {
+  margin-left: 3%;
+  margin-right: 3%;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  .btn-container {
+    display: ;
+  }
+
+  .nav-items {
+    display: block;
+  }
+  a button {
+    width: 10rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    position: relative;
+  }
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: center;
+  }
+  .nav-items {
+    display: block;
   }
 }
