Navbar show me shege small

--- a/template/pages/landingPage.html
+++ b/template/pages/landingPage.html
@@ -34,16 +34,18 @@
         <div class="topnav" id="myTopnav">
           <div class="nav-items">
             <div>
-              <a href="#home" class="active"
+              <a href="#logo" class="active"
                 ><img
                   width="70px"
                   height="50px"
                   src="/Trackerr/static/login-02/assets/trackerr-logo.jpg"
                   alt="Logo"
+                  class="logo"
               /></a>
               <a href="#news" class="link">News</a>
               <a href="#contact" class="link">Contact</a>
               <a href="#about" class="link">About</a>
+
               <a href=""><button>Login</button></a>
               <a href=""><button>Register</button></a>
             </div>
@@ -54,6 +56,9 @@
                   src="/Trackerr/static/assets/icons8-hamburger-button-50 (1).png"
                   alt="Menu"
                   style="background-color: white"
+                  class="menu"
+                  width="45px"
+                  height="50px"
               /></i>
             </a>
           </div>
@@ -62,8 +67,8 @@
     </nav>
     <header>
       <div class="hearder-text">
-        <h1>TRACK</h1>
-        <h2>tracking your parcel is easy with us</h2>
+        <h1>TRACKERR</h1>
+        <h2>Tracking your parcel is easy with us</h2>
       </div>
       <div class="search-section">
         <h1>Track</h1>
