--- a/static/styles/landingPage.css
+++ b/static/styles/landingPage.css
@@ -57,15 +57,16 @@ button {
   transform: translateY(-2px);
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
   height: 35px;
+  width: 75px;
   color: white;
   background-color: #a753ff;
   border: none;
   border-radius: 5px;
-  padding: 5px 15px;
-  margin-left: 10px;
+  margin-left: 10 px;
   cursor: pointer;
-  width: 90px;
+  margin-top: 0.5rem;
 }
+
 button:hover {
   background-color: #b39eb5;
 }
@@ -95,6 +96,7 @@ input {
   border: none;
   padding: 5%;
   background-color: white;
+  border-radius: 5px;
 }
 #trackingForm {
   display: flex;
@@ -111,13 +113,27 @@ input {
   height: 45px;
   border-radius: 5px;
   padding: 5px;
+  font-style: italic;
+}
+#searchInput:focus {
+  border: 1px solid #a753ff;
 }
 h1 {
   color: white;
   font-size: 5rem;
   margin: 0;
+  font-weight: bolder;
+  font-family: "Times New Roman", Times, serif;
+}
+h2 {
+  font-style: oblique;
+  font-weight: lighter;
+  color: gainsboro;
 }
 
+.logo {
+  border-radius: 5px;
+}
 .search-section h1 {
   color: red;
   font-size: 2rem;
@@ -125,7 +141,7 @@ h1 {
 
 header {
   padding: 50px;
-  border-bottom: 1px solid black;
+
   box-shadow: 0 6px 8px -5px rgba(0, 0, 0, 0.15);
   background: #a753ff;
 }
@@ -141,6 +157,10 @@ header {
   margin: 80px;
   padding: 10px;
 }
+.menu {
+  width: 40px;
+  height: 38px;
+}
 
 .product-info {
   display: flex;
@@ -151,6 +171,8 @@ header {
 }
 .detail-button {
   font-size: small;
+  width: 8rem;
+  height: 2rem;
 }
 .status {
   font-style: italic;
@@ -180,6 +202,7 @@ footer {
   left: 0;
   right: 0;
 }
+
 @media screen and (max-width: 480px) {
   html {
     font-size: 57%;
@@ -221,35 +244,53 @@ footer {
     padding: 10px;
   }
   .product-container {
-    background-color: red;
-    width: 10vw;
+    background-color: whitesmoke;
+    width: 90%;
+    margin: 10px;
+    margin-right: 20px;
+    margin-left: 24px;
   }
   .product-info {
     width: 100%;
+  }
+  .detail-button {
+    font-size: 1rem;
+    height: 2.5rem;
+    width: 9rem;
   }
 }
 
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  padding-bottom: 1rem;
 }
 
 .topnav a {
   float: left;
-  display: block;
+
   color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
+  display: flex;
+  padding-top: 1rem;
+  padding-bottom: 0;
+  padding-right: 2rem;
+  padding-left: 1rem;
   text-decoration: none;
   font-size: 17px;
 }
-.btn {
-  float: right;
+
+.topnav .link {
+  text-align: center;
+
+  margin-top: 1rem;
 }
 
 .topnav .link:hover {
   background-color: #ddd;
   color: black;
+}
+.topnav .link {
+  margin-left: 0;
+  margin-bottom: 1rem;
 }
 
 .topnav a.active {
@@ -276,15 +317,20 @@ footer {
     float: right;
     display: block;
   }
-  .btn-container {
-    display: ;
-  }
 
+  .topnav .link {
+    text-align: center;
+
+    padding: 0;
+  }
   .nav-items {
     display: block;
   }
   a button {
     width: 10rem;
+  }
+  .menu {
+    border-radius: 5px;
   }
 }
 
