Navbar show me shege small

--- a/static/styles/landingPage.css
+++ b/static/styles/landingPage.css
@@ -320,8 +320,7 @@ footer {
 
   .topnav .link {
     text-align: center;
-
-    padding: 0;
+    margin-bottom: 1rem;
   }
   .nav-items {
     display: block;
