--- a/static/styles/vendorPage.css
+++ b/static/styles/vendorPage.css
@@ -8,6 +8,7 @@ html {
     scroll-behavior: smooth;
     font-size: 100%;
     transition: 0.5s;
+    background-image: linear-gradient(to bottom, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
 }
 
 @keyframes overflow {
@@ -21,8 +22,7 @@ html {
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url("/Trackerr/static/login-02/assets/backimage.jpg");
-    background: transparent;
+    background-image: linear-gradient(to bottom, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
     display: block;
     justify-content: center;
     align-items: center;
